Integrate Esprima's regexp detection into the demo.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "scripts": {
     "build-unicode": "node --harmony_destructuring --harmony_rest_parameters gen-unicode",
-    "build": "../ragel/bin/ragel --error-format=msvc -P lexer.rl",
+    "build": "../ragel/bin/ragel -s --error-format=msvc -P lexer.rl",
     "prepublish": "npm run build-unicode && npm run build"
   },
   "repository": "RReverser/js-ragel",
